example-grpc/deploy/hellworld-grpc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworldgrpc
  labels:
    app: helloworldgrpc
  annotations:
    konghq.com/protocol: "grpc"
spec:
  ports:
  - name: grpc
    port: 9001
    targetPort: 5000
  selector:
    app: helloworldgrpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworldgrpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworldgrpc
  template:
    metadata:
      labels:
        app: helloworldgrpc
    spec:
      containers:
      - image: bjd145/grpc:0.2
        name: helloworldgrpc
        ports:
        - containerPort: 5000
